# ml-from-scratch

./: .gitignore  Makefile  README.md  explore.ipynb  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
algorithms/linear_regression/: core.py  data.py  io.py  optimization.py
algorithms/logistic_regression/: core.py  optimization.py
algorithms/nearest_neighbors/: core.py
algorithms/perceptron/: core.py
data/: us_population.csv  world_poverty.csv
examples/: linear_regression.ipynb  logistic_regression.ipynb  nearest_neighbors.ipynb  perceptron.ipynb
examples/html/: linear_regression.html  logistic_regression.html  nearest_neighbors.html  perceptron.html
linear_regression/: core.py  data.py
tests/: test_core.py  test_linear_regression.py
tests/algorithms/linear_regression/: test_core.py  test_core_linear_regression.py  test_data.py  test_io.py  test_linear_regression_io.py  test_linear_regression_optimization.py  test_optimization.py
tests/algorithms/linear_regression/output/: test.csv
tests/algorithms/logistic_regression/: test_logistic_regression_core.py  test_logistic_regression_optimization.py
tests/algorithms/nearest_neighbors/: test_core_nearest_neighbors.py
tests/algorithms/perceptron/: test_core_perceptron.py  test_perceptron_core.py
