[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = ""
authors = ["Luke Grecki <lukegrecki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.0"
black = "^20.8b1"
ipython = "^7.19.0"
jedi = "0.17.2"
mypy = "^0.790"
flake8 = "^3.8.4"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
nbconvert = "^6.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
